# SnowyShell

./: .gitignore  README.md  flake.nix  init.lua
crates/idle/: Cargo.toml  idle-dev-1.rockspec  package.nix
crates/sysinfo/: Cargo.toml  package.nix  sysinfo-dev-1.rockspec
crates/sysinfo/src/: lib.rs  lua.rs
crates/sysinfo/src/sys/: mem.rs  net.rs
crates/sysinfo/src/sys/cpu/: cpu_usage.rs
crates/sysinfo/src/sys/mem/: mem_usage.rs
crates/sysinfo/src/sys/net/: net_stats.rs
lua/bar/: audio.lua  init.lua  media.lua  notification.lua  stats.lua  tray.lua  win.lua  workspaces.lua
nix/: hm-module.nix  package.nix
rust/: Cargo.toml  package.nix  snowy_utils-dev-1.rockspec
rust/src/: cli.rs  lib.rs  lua.rs  main.rs  sys.rs
rust/src/cpu/: cpu_usage.rs
rust/src/mem/: mem_usage.rs
rust/src/net/: net_stats.rs
rust/src/sys/: cpu.rs
rust/src/sys/cpu/: cpu_usage.rs
rust/src/sys/mem/: mem_usage.rs
rust/src/sys/net/: net_stats.rs
scss/: consts.scss
scss/bar/: style.scss
src/: init.lua  style.scss
src/lua/: lib.lua
src/lua/Bar/: Audio.lua  QuickSettings.lua  Statistics.lua  Tray.lua  indicators.lua  init.lua  notifications.lua  stats.lua
src/lua/NotificationCenter/: Music.lua  Notifications.lua  init.lua
src/lua/Notifications/: popups.lua
src/lua/bar/: init.lua  stats.lua  tray.lua
src/lua/notif/: init.lua  popups.lua
src/lua/utils/: sys.lua
src/scss/: colors.scss  consts.scss
src/scss/NotificationCenter/: style.scss
src/scss/bar/: style.scss  workspaces.scss
src/scss/notifications/: style.scss
src/widget/: Bar.lua
